--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     <title>Brownie Stars - Página inicial</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="google082e78359e5a164d.html">
+    
     <style>
     body {
     background: #D9D9D9;
